<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:background="@drawable/bg_edt"
            android:gravity="center"
            android:hint="@string/number_hint"
            android:inputType="number|numberSigned"
            android:maxLength="5"
            android:padding="@dimen/edittext_padding"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@color/edt_border"
            android:textSize="@dimen/_14sdp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="7"
            android:background="@drawable/bg_edt"
            android:drawableLeft="@mipmap/ic_launcher_mobile"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/str_mobile_no"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="@dimen/_5sdp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/edt_border"
            android:textSize="@dimen/_14sdp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_btn"
        android:text="@string/str_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"/>

</LinearLayout>
