<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/back"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/_14sdp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_size"
        android:text="@string/enter_sms_code"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/text_size"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        android:weightSum="10">

        <EditText
            android:id="@+id/edi1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="2"
            android:background="@drawable/bg_edt_verify"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/textcolor"/>

        <EditText
            android:id="@+id/edi2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="2"
            android:background="@drawable/bg_edt_verify"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/textcolor"/>

        <EditText
            android:id="@+id/edi3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="2"
            android:background="@drawable/bg_edt_verify"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/textcolor"/>

        <EditText
            android:id="@+id/edi4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="2"
            android:background="@drawable/bg_edt_verify"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/textcolor"/>

    </LinearLayout>

    <Button
        android:id="@+id/activity_otp_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_padding"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_btn_verify_otp"
        android:text="@string/confirm_code"
        android:textAllCaps="false"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/text_size"/>

</LinearLayout>
